Fixed the extra space bug

--- a/ENVI_SIM/BusDashBoard/static/BusDashBoard/DashBoard.css
+++ b/ENVI_SIM/BusDashBoard/static/BusDashBoard/DashBoard.css
@@ -4,25 +4,29 @@
 
  #back_ground{
     background-color: #91E0DF;
-    height: 580px;
+    position: relative;
+    height: 570px;
     width: 2000px;
-    
-  
+    margin: 0%;
+    padding: 0%;
    
-    
   }
+
+  
   #dash_board{
 
     background-color: #ffffff;
-    height: 480px;
-    width: 70%;
-    top: 25%;
-    left: 15%;
-    position: absolute;
+    position: relative;
+    height: 490px;
+    width: 1100px;
+    top: 5%;
+    left: 35%;
+    
+    
+    
     border-radius: 10px;
 
   }
-
 
  
   li {
@@ -33,11 +37,7 @@
     display: block;
     padding: 1em;
     border-radius: 5px;
-  
-
     width: 46.99%;
-   
-   
     background-color: #ffffff;
   }
 
@@ -135,6 +135,7 @@ border-radius: nullpx;
 
 /*The stylying for drop down bus style*/
 
+
 #dropdown_list{
  
   padding-top: 50px;
@@ -187,93 +188,92 @@ border-radius: nullpx;
 /*The Dashboard of Electrical bus */
 
 
- /* Split the screen in half */
- .split {
+.split {
 
-  position: fixed;
+  position: absolute;
   height: 300px;
   width: 300px;
  
-  
-  
 }
+
+
 
 /* Control the left side */
 .left {
-  position: relative;
+  position: absolute;
 
 }
 
 /* Control the right side */
 .right {
-  position: relative;
-  
+  position: absolute;
   left:400px;
   bottom: 100px;
+  
+}
+
+li .my_input-d{
+
+background-color: rgb(212, 212, 212);
+display:inline-block;
+
+ 
+  
 }
 
 
-li .my_input{
-
-   background: #CCE0FF;
-   display: inline-block;
-   border-radius: 10px;
-   width: 100px;
-   padding-right: 50px;
-  
-
-  
-   
-}
 
 #title_input{
-   color:black;
-   padding-bottom: 2px;
+  color:rgb(0, 0, 0);
+  padding-bottom: 2px;
+
+  float:top;
 }
 
 
 ul li {
-  display: inline-block;
+ display: inline-block;
 }
 
 #Bus-icon{
- 
-  position: relative;
-  width: 300px;
-  height: 200px;
+
+ position: absolute;
+ width: 300px;
+ height: 200px;
+ left:300px;
 
 }
 
 #Save-button-eletrical-dashboard{
 
-  background-color: #91E0DF; /* Green */
-  
-  color: black;
-  border-color: #468382;
-  padding: 15px 32px;
-  border-radius: 10px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
+ background-color: #91E0DF; /* Green */
+ 
+ color: black;
+ border-color: #468382;
+ padding: 15px 32px;
+ border-radius: 10px;
+ text-align: center;
+ text-decoration: none;
+ display: inline-block;
 
-  font-size: 16px;
-  padding-left: 200px;
+ font-size: 16px;
+ padding-left: 200px;
 }
 
 #Save-button-eletrical-dashboard-location{
-  padding-top: 200px;
+ padding-top: 200px;
 }
 
 /*The Dashboar of liquid-fuel bus */
 
 #liquid-fuel-input{
-  padding-top: 100px;
+ padding-top: 100px;
 }
 
 #Fuel-Bus-icon{
-  padding-top: 100px;
-  
-  position: relative;
-  width: 300px;
-  height: 200px;
+ padding-top: 100px;
+ 
+ position: relative;
+ width: 300px;
+ height: 200px;
 }
